<resources>
    <string name="app_name">Yore Explore</string>

    <!--LOGIN-->
    <string name="sign_in">Log In</string>
    <string name="sign_up">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <!--Menu Strings-->
    <string name="menu_addSite">Add</string>
    <string name="menu_cancelSite">Cancel</string>

    <string name="action_map">Map</string>
    <string name="action_sites">Sites</string>
    <string name="action_profile">Profile</string>
    <string name="action_about">About</string>

    <!--Splash Screen-->
    <string name="Slogan">Do you know the way?</string>
    <string name="btn_CloseSplash">Explore</string>
    <string name="Alt_AppLogo">App Logo</string>

    <!--Map Activity-->
    <string name="title_activity_site_map">All Site</string>

    <string name="button_addSite">Add Site</string>
    <string name="button_cancelSite">Cancel</string>
    <string name="button_saveSite">Save</string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_changeImage"> Change Image </string>
    <string name="button_location">Set Location</string>
    <string name="location_here">Here</string>

    <!--Site Activity-->
    <string name="hint_townland">Townland..</string>
    <string name="hint_dateVisited">Date Visited..</string>
    <string name="hint_latitude">Latitude..</string>
    <string name="hint_longitude">Longitude..</string>
    <string name="hint_county">County..</string>

    <string name="toast_enter_data"> Please Complete Form </string>
    <string name="toast_added">Hillfort Added</string>
    <string name="toast_saved">Saved</string>
    <string name="toast_canceled">Not Saved</string>

    <string name="select_siteImage">Select an image</string>
    <string name="change_siteImage">Change image</string>


    <!--Below here is boiler plate. Wanted Removed-->

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>



    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="SiteImage">Site Image</string>
    <string name="LowerX">x</string>
    <string name="mapThumbnail">Map Thumbnail</string>
    <string name="DeleteButton">Delete</string>
    <string name="btn_today">Today</string>
    <string name="btn_visitedToday">Show Visited Today</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_deleteSite">Delete</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>
